fix: refactorización usando patrón de diseño observador.